<resources>
    <string name="app_name">Notera</string>
    <string name="sterotype_message">Hello</string>
    <string name="main_add_btn">Add Note</string>
    <string name="main_default_remove_btn">Remove (0)</string>
    <string name="main_format_remove_btn">Remove (%d)</string>
    <string name="main_search_note">Search..</string>

    <string name="note_title_hint">Note title..</string>
    <string name="note_text_hint">Note text..</string>
    <string name="note_save_btn">Save note</string>


    <string name="menu_title">Note options</string>
    <string name="menu_update">Update</string>
    <string name="menu_remove">Remove</string>
</resources>
