<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nu.rolandsson.jakob.notera.NoteActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint"
        android:padding="20dp"
        android:id="@+id/note_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_title"
        android:layout_above="@id/note_save_btn">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/note_text"
            android:hint="@string/note_text_hint"
            android:paddingHorizontal="30dp" />
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_save_btn"
        android:layout_alignParentBottom="true"
        android:id="@+id/note_save_btn" />

</RelativeLayout>
